really final checkpoint, I want

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
             <p>Explore the current Youtube trends based on video comments' keyword analysis.</p>
             <!-- Include your visualization tool here -->
             <div id="wordcloud-placeholder" class="wordcloud">
-                <img src="static/img/word_ex.png" alt="wordcloud" style="height : 500px;">
+                <img src="static/img/total_wordcloud.png" alt="wordcloud" style="height : 500px;">
             </div>
         </section>
         
