--- a/templates/proposal.html
+++ b/templates/proposal.html
@@ -11,10 +11,10 @@
     
 
     <style>
-        #chart{
+        /* #chart{
             display : flex;
             justify-content: center;
-        }
+        } */
 
         .channel-item {
             width: 100%;
@@ -313,142 +313,6 @@
 
 
 
-        // function searchYouTuber(youtuberName) {
-        //     var contactEmail = document.getElementById("contact-email");
-        //     var foundYoutuber = database.find(function(youtuber) {
-        //         return youtuber.title.toLowerCase() === youtuberName.toLowerCase();
-        //     });
-
-        //     if (foundYoutuber) {
-        //         contactEmail.value = foundYoutuber.mails;
-        //     } else {
-        //         contactEmail.value = "";
-        //         alert("YouTuber not found in the database.");
-        //     }
-        // }
-
-        // var activeSuggestion = -1;
-
-        // document.querySelector('#youtuber-name').addEventListener('keyup', function(e){
-        //     const suggestionsDiv = document.getElementById('suggestions');
-        //     const children = Array.from(suggestionsDiv.children);
-
-        //     if(e.key == 'Enter'){
-        //         e.preventDefault();
-        //         if(activeSuggestion > -1){
-        //             children[activeSuggestion].click();
-        //         }
-        //         else{
-        //             document.querySelector('#youtuber-name').blur();
-        //             document.querySelector('#search_btn').click();
-        //             suggestionsDiv.innerHTML = "";
-        //             suggestionsDiv.style.display = "none";
-        //             activeSuggestion = -1
-        //         }
-        //         }
-        //     });
-
-        // document.querySelector('#youtuber-name').addEventListener('keydown', function(e){
-        //     const suggestionsDiv = document.getElementById('suggestions');
-        //     const children = Array.from(suggestionsDiv.children);
-
-        //     if (e.key === 'ArrowDown') {
-        //         e.preventDefault();
-        //         const nextIndex = activeSuggestion >= 0 ? (activeSuggestion + 1) % children.length : activeSuggestion+1;
-        //         // const nextIndex = activeSuggestion+1;
-        //         setActiveSuggestion(nextIndex);
-        //     } else if (e.key === 'ArrowUp') {
-        //         e.preventDefault();
-        //         const prevIndex = activeSuggestion > -1 ? activeSuggestion - 1 : -1;
-        //         setActiveSuggestion(prevIndex);
-        //     } else if (e.key != "Enter") {
-        //         setTimeout(() => {autocomplete(e);}, 0);
-        //     } else if(e.key == "Enter"){
-        //         e.preventDefault();
-        //     }
-        // })
-
-
-        // var searchButton = document.getElementById("search_btn");
-        // searchButton.addEventListener("click", searchYouTuber);
-        
-        // function autocomplete(e) {
-        //         const suggestionsDiv = document.getElementById('suggestions');
-        //         let suggestions=[];
-
-        //         const input = document.getElementById('youtuber-name');
-        //         const query = input.value.toLowerCase();
-                
-        //         console.log(query)
-
-        //         // Filter the search targets based on the query
-        //         const sug_list = database.filter(function(item) {
-        //             return item.title.toLowerCase().includes(query)
-        //         });
-        //         if (input.value != ""){
-        //             suggestions = sug_list.map(item => item.title);
-        //         }
-
-        //         // console.log(suggestions);
-
-        //         suggestionsDiv.innerHTML = ''
-
-        //         // Display the suggestions
-
-        //         suggestions.forEach((suggestion, index) => {
-        //             const div = document.createElement('div');
-        //             div.textContent = suggestion;
-        //             div.id = 'suggestion-' + index;
-        //             div.onclick = selectSuggestion;
-        //             div.onmouseover = function() {
-        //                 setActiveSuggestion(index);
-        //             };
-        //             div.onmouseleave = function() {
-        //                 if(isKorean(e.key)){
-        //                     setActiveSuggestion(-2);
-        //                 } else{
-        //                     setActiveSuggestion(-1);
-        //                 }
-        //             };
-        //             suggestionsDiv.appendChild(div);
-        //         });
-
-        //         suggestionsDiv.style.display = suggestions.length ? 'block' : 'none';
-
-        //         activeSuggestion = isKorean(e.key) ? -2 : -1;
-        //     }
-
-        //     function setActiveSuggestion(index) {
-        //         const suggestionsDiv = document.getElementById('suggestions');
-        //         const children = Array.from(suggestionsDiv.children);
-        //         children.forEach((child, i) => {
-        //             child.style.background = i === index ? '#ddd' : '#fff';
-        //         });
-        //         activeSuggestion = index;
-
-        //         if (activeSuggestion >= 0) {
-        //             children[activeSuggestion].scrollIntoView({ block: 'nearest' });
-        //         }
-        //     }
-
-        //     function selectSuggestion() {
-        //         const input = document.getElementById('youtuber-name');
-        //         const suggestionsDiv = document.getElementById('suggestions');
-        //         input.value = this.textContent;
-        //         input.focus();
-        //         suggestionsDiv.style.display = 'none';
-        //         activeSuggestion = -1;
-        //     }
-
-        //     function isKorean(char) {
-        //     const unicode = char.charCodeAt(0);
-        //     return ((unicode >= 0xAC00 && unicode <= 0xD7A3) ||  // Hangul Syllables
-        //             (unicode >= 0x1100 && unicode <= 0x11FF) ||  // Hangul Jamo
-        //             (unicode >= 0x3130 && unicode <= 0x318F) ||  // Hangul Compatibility Jamo
-        //             (unicode >= 0xA960 && unicode <= 0xA97F) ||  // Hangul Jamo Extended-A
-        //             (unicode >= 0xD7B0 && unicode <= 0xD7FF));   // Hangul Jamo Extended-B
-        // }
-
         function drawGraph(id, data, value, y_label, title){
             $(id).innerHTML = "";
             var svgWidth = 1200, svgHeight = 500;
@@ -557,15 +421,6 @@
             })
 
 
-        // var dots = g.selectAll("dot")	
-        //     .data(data)	
-        //     .enter().append("circle")
-        //     .attr("class", "dot")
-        //     .style("opacity",0)
-        //     .attr("r", 3) // initially invisible
-        //     .attr("cx", function(d) { return x(d["word_corr"]); })	
-        //     .attr("cy", function(d) { return y(d[value]); });
-        
         var tooltip = d3.select(id).append("div")	
             .attr("class", "tooltip")
             .style("opacity", 0); // initially hidden
